--- a/style.css
+++ b/style.css
@@ -23,12 +23,20 @@ body{
     margin: 1px;
     text-align: center;
     border-radius: 20px;
+    background-color: rgba(110, 104, 104, 0.671);
+    color: white;
+}
+.botao:hover{
+    background-color: rgb(110, 104, 104);
+    cursor: pointer;
 }
 .botoes{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    
 }
 .tela{
     background-color: black;
@@ -38,12 +46,7 @@ body{
     box-shadow: 1px 1px 1px indigo;
     
 }
-.n{
-    display: inline;
-    width: fit-content;
-    flex-direction: row;
-    
-}
+
 input#display{
     margin: 5px;
 }
